--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,13 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "node-sass": "^4.9.0",
     "poi": "^10.2.1",
-    "react-hot-loader": "^4.2.0"
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "purgecss-webpack-plugin": "^0.20.1",
+    "purgecss-whitelister": "^1.1.3",
+    "react-hot-loader": "^4.2.0",
+    "sass-loader": "^6.0.7",
+    "tailwindcss": "^0.5.3"
   }
 }
