--- a/template/package.json
+++ b/template/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "scripts": {
     "dev": "poi",
-    "build": "poi build"
+    "build": "poi build",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
   },
   "dependencies": {<% if (pwa) { %>
     "offline-plugin": "^5.0.3",<% } %>
@@ -30,7 +32,7 @@
     "purgecss-webpack-plugin": "^0.20.1",
     "purgecss-whitelister": "^1.1.3",
     "react-hot-loader": "^4.2.0",
-    "sass-loader": "^6.0.7",
-    "tailwindcss": "^0.5.3"
+    "sass-loader": "^6.0.7"<% if(tailwindcss) { %>,
+    "tailwindcss": "^0.5.3"<% } %>
   }
 }
