add routing option

--- a/template/package.json
+++ b/template/package.json
@@ -7,11 +7,11 @@
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
   },
-  "dependencies": {
+  "dependencies": {<% if (routing) { %>
     "@curi/core": "^1.0.0-beta.35",
     "@curi/react": "^1.0.0-beta.26",
     "@curi/route-active": "^1.0.0-beta.6",
-    "@hickory/browser": "^1.0.0-beta.7",
+    "@hickory/browser": "^1.0.0-beta.7",<% } %>
     "loadable-components": "2.2.2",<% if (pwa) { %>
     "offline-plugin": "^5.0.3",<% } %>
     "react": "^16.4.0",
