--- a/template/package.json
+++ b/template/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "poi",
     "build": "poi build",
+    "serve": "serve dist -l 8000",
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
   },
@@ -37,7 +38,8 @@
     "purgecss-webpack-plugin": "^0.20.1",
     "purgecss-whitelister": "^1.1.3",
     "react-hot-loader": "^4.2.0",
-    "sass-loader": "^6.0.7"<% if(tailwindcss) { %>,
+    "sass-loader": "^6.0.7",
+    "serve": "^7.2.0"<% if(tailwindcss) { %>,
     "tailwindcss": "^0.5.3"<% } %>
   },
   "resolutions": {
