--- a/template/static/manifest.json
+++ b/template/static/manifest.json
@@ -1,12 +1,18 @@
 {
   "name": "<%= name %>",
   "short_name": "<%= name %>",
-  "icons": [{
-    "src": "favicon.ico",
-    "sizes": "64x64 32x32 24x24 16x16",
-    "type": "image/x-icon"
-  }],
-  "start_url": "./",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo-128.png",
+      "sizes": "128x128"
+    }
+  ],
+  "start_url": "./?homescreen=true",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "orientation": "portrait",
