--- a/template/package.json
+++ b/template/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "poi",
     "build": "poi build",
+    "build:analyze": "poi build --bundle-report",
     "serve": "serve dist -l 8000",
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
@@ -19,6 +20,7 @@
     "react-dom": "^16.4.0"
   },
   "devDependencies": {
+    "@poi/plugin-bundle-report": "^10.0.1",
     "@poi/plugin-eslint": "^10.0.2",<% if (pwa) { %>
     "@poi/plugin-offline": "^10.0.1",<% } %>
     "babel-eslint": "^8.2.3",
