--- a/template/package.json
+++ b/template/package.json
@@ -16,7 +16,9 @@
     "@loadable/component": "^5.0.1",<% if (pwa) { %>
     "offline-plugin": "^5.0.3",<% } %>
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",<% if (i18n) { %>
+    "react-localize-redux": "^3.2.0",
+    "redux": "^4.0.0",<% } %>
     "redux-bundler": "^21.2.1",
     "redux-bundler-react": "^1.0.0"
   },
