--- a/template/package.json
+++ b/template/package.json
@@ -8,11 +8,7 @@
     "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .js,.jsx --ignore-path .gitignore ."
   },
-  "dependencies": {<% if (routing) { %>
-    "@curi/core": "^1.0.0-beta.35",
-    "@curi/react": "^1.0.0-beta.26",
-    "@curi/route-active": "^1.0.0-beta.6",
-    "@hickory/browser": "^1.0.0-beta.7",<% } %>
+  "dependencies": {
     "@loadable/component": "^5.0.1",<% if (pwa) { %>
     "offline-plugin": "^5.0.3",<% } %>
     "react": "^16.6.1",
