--- a/template/package.json
+++ b/template/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^16.8.3",<% if (i18n) { %>
     "react-localize-redux": "^3.5.2",<% } %>
     "redux-bundler": "^23.1.0",
-    "redux-bundler-react": "^1.1.0",<% if (pwa) { %>
+    "redux-bundler-react": "^1.1.0"<% if (pwa) { %>,
     "register-service-worker": "^1.6.2"<% } %>
   },
   "devDependencies": {
