--- a/template/package.json
+++ b/template/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
