--- a/template/package.json
+++ b/template/package.json
@@ -10,22 +10,29 @@
   },
   "dependencies": {
     "@loadable/component": "^5.6.0",
-    "internal-nav-helper": "^1.1.0",
+    "classnames": "^2.2.6",
+    "internal-nav-helper": "^3.1.0",
     "money-clip": "^3.0.1",<% if (pwa) { %>
     "offline-plugin": "^5.0.3",<% } %>
     "react": "^16.8.3",
     "react-dom": "^16.8.3",<% if (i18n) { %>
     "react-localize-redux": "^3.5.2",<% } %>
-    "redux-bundler": "^23.1.0",
+    "redux-bundler": "^25.0.0",
+    "redux-bundler-async-resources": "^2.0.0-beta.2",
+    "redux-bundler-async-resources-hooks": "^1.0.1",
+    "redux-bundler-hook": "^1.0.3",
     "redux-bundler-react": "^1.1.0"<% if (pwa) { %>,
     "register-service-worker": "^1.6.2"<% } %>
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
     "@poi/plugin-bundle-report": "^12.1.0",
     "@poi/plugin-eslint": "^12.0.0",<% if (pwa) { %>
     "@poi/plugin-pwa": "^12.0.3",<% } %>
     "@svgr/webpack": "^4.1.0",
     "babel-eslint": "^8.2.3",
+    "babel-plugin-classnames": "^0.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -36,6 +43,8 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-hooks": "^1.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "favicons-webpack-plugin": "^1.0.1",
+    "linaria": "^1.3.1",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "poi": "^12.5.5",
@@ -47,7 +56,12 @@
     "react-hot-loader-loader": "^0.0.7",
     "sass-loader": "^6.0.7",
     "serve": "^10.0.2",<% if (tailwindcss) { %>
-    "tailwindcss": "^0.7.2",<% } %>
+    "tailwindcss": "^1.0.6",<% } %>
     "terser-webpack-plugin": "^1.1.0"
-  }
+  },
+  "browserslist": [
+    ">0.25%",
+    "not ie 11",
+    "not op_mini all"
+  ]
 }
